feat: 补充运行 DesktopApp 脚本